Updated login page to match Figma design.

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
     "name": "carbonwise",
     "private": true,
     "scripts": {
-      "start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
-      "build": "npm run build --prefix frontend && npm run build --prefix backend"
+        "start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
+        "build": "npm run build --prefix frontend && npm run build --prefix backend"
     },
-    "dependencies": {
-      "concurrently": "^7.0.0"
+    "devDependencies": {
+        "concurrently": "^9.1.0"
     }
-  }
-  
+}
