--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     },
     "devDependencies": {
         "concurrently": "^9.1.0"
+    },
+    "dependencies": {
+        "react-router-dom": "^7.0.1"
     }
 }
