--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "concurrently": "^9.1.0"
     },
     "dependencies": {
+        "jsonwebtoken": "^9.0.2",
         "react-router-dom": "^7.0.1"
     }
 }
