Calculation for carbon footprint done

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "concurrently": "^9.1.0"
     },
     "dependencies": {
+        "axios": "^1.7.9",
         "react-router-dom": "^7.0.1"
     }
 }
