--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "bcrypt": "^5.1.1",
         "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.12.0",
         "react-router-dom": "^7.0.2"
     }
 }
