--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "dependencies": {
         "axios": "^1.7.9",
         "jsonwebtoken": "^9.0.2",
-        "react-router-dom": "^7.0.2"
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-icons": "^5.4.0",
+        "react-router-dom": "^7.0.2",
+        "react-toastify": "^10.0.6"
     }
 }
