--- a/package.json
+++ b/package.json
@@ -5,22 +5,12 @@
         "start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
         "build": "npm run build --prefix frontend && npm run build --prefix backend"
     },
-    "devDependencies": {
-        "concurrently": "^9.1.0"
-    },
     "dependencies": {
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "jsonwebtoken": "^9.0.2",
-<<<<<<< HEAD
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-icons": "^5.4.0",
-        "react-router-dom": "^7.0.2",
-        "react-toastify": "^10.0.6"
-=======
         "mongodb": "^6.12.0",
-        "react-router-dom": "^7.0.2"
->>>>>>> 332b722e7ccec628e4638ef0b69ef2a2fc1ec5b2
+        "react-router-dom": "^7.0.2",
+        "sweetalert2": "^11.14.5"
     }
 }
