--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.12.0",
         "react-router-dom": "^7.0.2",
+        "react-scripts": "^5.0.1",
         "sweetalert2": "^11.14.5"
     }
 }
