--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "mongodb": "^6.12.0",
         "react-router-dom": "^7.0.2",
         "react-scripts": "^5.0.1",
-        "sweetalert2": "^11.14.5"
+        "sweetalert2": "^11.14.5",
+        "web-vitals": "^4.2.4"
     }
 }
