--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "mongodb": "^6.12.0",
         "react-router-dom": "^7.0.2",
         "react-scripts": "^5.0.1",
+        "slick-carousel": "^1.8.1",
         "sweetalert2": "^11.14.5",
         "web-vitals": "^4.2.4"
     }
