--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "npm run build --prefix frontend && npm run build --prefix backend"
     },
     "dependencies": {
+        "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.2.0",
         "@mui/material": "^6.2.0",
         "axios": "^1.7.9",
