--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,5 +5,12 @@
         "src": "backend/server.js",
         "use": "@vercel/node"
       }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/backend/$1" 
+      }
     ]
-  }  
+  }
+  
