--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/backend/$1" 
+        "dest": "/backend/server.js" 
       }
     ]
   }
