--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,9 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/backend/server.js" 
+        "src": "/backend/server.js",
+        "dest": "/api/(.*)"  
       }
     ]
   }
-  
