--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "backend/server.js",
+        "src": "server.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "backend/server.js"
+        "dest": "server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
       }
     ]
   }
