--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@mui/material": "^6.2.0",
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.12.0",
         "react-router-dom": "^7.0.2",
